<resources>
    <string name="app_name">DosaCorner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="about_us1">Dosa corner is a traditional Indian restaurant running since 2015, located at Barkly street, West Footscray.</string>
    <string name="about_us2">Two renowned Chefs who had the passion for food, joined hands with one of their friend to start a restaurant named Dosa Corner.
        The vision they had was to bring the real taste of India to Australia and at the same time to deliver quality food to people.</string>

    <string name="about_us3">    In Dosa Corner we serve delicious Indian cuisine made from the real spices of India which will make your taste bud go crazy for our food.
        Feel the real taste and flavours of India here! When our crispy and delightful dosa’s are in front of you, nothing can stop you from eating it.
        Chaat, dosa, biryani, indo-chinese rice and noodles, desserts – name anything and we show you the difference in taste and give you the memories that you can’t erase from your mind/tongue.
        Our menu also offers Chinese specials such as Pizza dosa, Fish pakora, chilli prawns and lot more. Book your table, come and dine in with friends and family.
        We promise you that we won’t let your expectations go down. Let your taste buds relish the food and satisfy your crave that has been there for Indian food.
    </string>
    <string name="title_activity_contact_us">ContactUsActivity</string>

    <string name="hear_from_you">We would like to hear from you. Contact us</string>

    <string name="address_line1">587, Barkly Street</string>
    <string name="address_line2">West Footscray, Vic - 3012</string>
    <string name="social_media_contact">You can also connect with us through social media.</string>
    <string name="title_activity_book_table">BookTableActivity</string>


    <string-array name="No_of_ppl">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>


    </string-array>
    <string name="title_activity_menu">MenuActivity</string>
    
    
    
    <string name="kulfi_falooda">Kulfi Falooda</string>
    <string name="mango_lassi">Mango Lassi</string>
    <string name="jamun">Gulab Jamun</string>

    <string name="rasmalai">Rasmalai</string>
    <string name="soft_drink">Soft Drink</string>
    <string name="water_bottle">Water Bottle</string>



    <string name="jumbo">Jumbo</string>
    <string name="chkn">Chicken-65/Fried Chicken Biryani</string>
    <string name="family">Family</string>
<string name="veg"> Veg/Chicken/Goat Biryani</string>
    <string name="fish">Jumbo Fish Biryani</string>


    <string name="masala_dosa">Masala Dosa + Idly + Vada + Can</string>

    <string name="paneer_dosa">Paneer Dosa + Idly + Vada + Can</string>


    <string name="chkn_dosa">Chicken Dosa + Idly + Vada + Can</string>


    <string name="lamb_dosa">Lamb Dosa + Idly + Vada + Can</string>



</resources>
