<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_white"
    tools:context="com.hermitcrabs.dosacorner.View.ContactUsActivity">


    <include
        android:id="@+id/aboutus_bar"
        layout="@layout/appbar_menu" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#0f000000"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/dc_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hear_from_you"
                    android:textColor="#444444"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/location" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="17dp"
                            android:text="@string/address_line1"
                            android:textColor="#444444" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/address_line2"
                            android:textColor="#444444" />
                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ececec" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/website" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="17dp"
                            android:text="Website"
                            android:textColor="#444444" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="8dp"
                            android:text="www.thedosacorner.com.au"
                            android:textColor="#444444" />
                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ececec" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/mail" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="17dp"
                            android:text="Email"
                            android:textColor="#444444" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="8dp"
                            android:text="info@thedosacorner.com.au"
                            android:textColor="#444444" />
                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ececec" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/phone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="17dp"
                            android:text="Phone"
                            android:textColor="#444444" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="14dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="8dp"
                            android:text="0385285120"
                            android:textColor="#444444" />
                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ececec" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/social_media_contact"
                    android:textColor="#444444"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ececec" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"

                    android:weightSum="4">


                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:src="@drawable/google" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:src="@drawable/twitter"

                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:src="@drawable/instagram" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

